# pyroki

./: README.md  pyproject.toml
.github/workflows/: docs.yml  pyright.yml  pytest.yml
benchmark/: ik_benchmark.py
docs/: requirements.txt  update_example_docs.py
docs/source/: conf.py  index.rst
docs/source/examples/: 01_basic_ik.rst  02_bimanual_ik.rst  03_mobile_ik.rst  04_ik_with_coll.rst  05_ik_with_manipulability.rst  06_online_planning.rst  07_trajopt.rst  08_ik_with_mimic_joints.rst  09_hand_retargeting.rst  10_humanoid_retargeting.rst
docs/source/misc/: writing_manual_jac.rst
docs/source/tutorials/: 01_quickstart.rst
examples/: 01_basic_ik.py  02_bimanual_ik.py  02_ik.py  03_ik_with_collision.py  03_mobile_ik.py  04_ik_with_coll.py  04_ik_with_manipulability.py  05_ik_with_manipulability.py  05_ik_with_mobile_base.py  06_online_planning.py  06_trajopt.py  07_mpc_gradient.py  07_trajopt.py  08_ik_with_mimic_joints.py  09_hand_retargeting.py  10_humanoid_retargeting.py
examples/assets/: yumi_trajectory.npy
examples/pyroki_snippets/: _online_planning.py  _solve_ik.py  _solve_ik_with_base.py  _solve_ik_with_collision.py  _solve_ik_with_multiple_targets.py  _trajopt.py
scripts/: ik_benchmark.py
src/pyroki/: __init__.py  _costs.py  _loader.py  _robot.py  _robot_urdf_parser.py  _solver.py
src/pyroki/coll/: __init__.py  _collision.py  _geometry.py  _geometry_pairs.py  _robot_collision.py  _utils.py
src/pyroki/collision/: _collision.py  _geometry.py  _robot_collision.py
src/pyroki/costs/: __init__.py  (+2 more)
tests/: test_collision.py  test_costs.py
(+4 files in other folders)
